// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG"
    >
      
    </p>
  </div>
  <p>
    Your submission has been received and may undergo AI-assisted review during Submission phase. Results will be available for inspection in the review app and final evaluation occurs during Review phase.
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  />
</div>
`;

exports[`Snapshot match 2`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___1rEsJ"
    >
      Failed Screening
    </p>
  </div>
  <p>
    You have failed screening
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
  </div>
</div>
`;

exports[`Snapshot match 3`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__failed___1rEsJ"
    >
      Failed Screening with Warnings
    </p>
  </div>
  <p>
    You have failed screening and the screener has given you the following warning.
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
  </div>
</div>
`;

exports[`Snapshot match 4`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___19krr"
    >
      Passed Screening
    </p>
  </div>
  <p>
    You have passed screening.
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  />
</div>
`;

exports[`Snapshot match 5`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__passed___19krr"
    >
      Passed Screening with Warnings
    </p>
  </div>
  <p>
    You have passed screening, but the screener has given you 1 warnings that you must fix in round 2.
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__more-info___1aiaS"
    >
      Need more info on how to pass screening? Go to help to read Rules & Policies.
    </p>
  </div>
</div>
`;

exports[`Snapshot match 6`] = `
<div
  className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details___2ycEB"
>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-details-head___2rqCn"
  >
    <p
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__status-title___3HTbG src-shared-components-SubmissionManagement-ScreeningDetails-___styles__pending___YZV4Z"
    >
      Pending
    </p>
  </div>
  <p>
    Your submission has been received, and will be screened after the end of the phase
    <a
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__help-link___41Oxm"
      href=""
    >
       
      Need help?
    </a>
  </p>
  <div
    className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
  >
    <div
      className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__screening-warning___1IMq5"
    >
      <div
        className="src-shared-components-SubmissionManagement-ScreeningDetails-___styles__warning-bold___20osd"
      >
        <span>
          Warning
        </span>
         
        1 : Brief #0
      </div>
      <p>
        Details #0
      </p>
    </div>
  </div>
</div>
`;
